objects/vlocity_ins__ThorOrchestrationQueue__c.object
<CustomObject>
    <description>Separate custom object for Thor implementation to avoid conflicts with existing functionalities of OrchestrationQueue__c</description>
    <fields>
        <fullName>vlocity_ins__GlobalKey__c</fullName>
        <externalId>true</externalId>
        <label>Global Key</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Implementation__c</fullName>
        <defaultValue>&quot;worker&quot;</defaultValue>
        <label>Implementation</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PodReplicas__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Kubernetes Pod Replicas</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Thor Orchestration Queue</label>
    <listViews>
        <fullName>vlocity_ins__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Thor Orchestration Queue Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Thor Orchestration Queues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>